@@ -23,7 +23,6 @@
 #include "RenderTheme.h"
 
 #include "CSSValueKeywords.h"
-#include "CSSStyleSheet.h"
 #include "Document.h"
 #include "FocusController.h"
 #include "Frame.h"
@@ -102,7 +101,9 @@ void RenderTheme::adjustStyle(CSSStyleSelector* selector, RenderStyle* style, El
 }
 
 #if !PLATFORM(QT)
-void RenderTheme::adjustDefaultStyleSheet(CSSStyleSheet* style) {}
+void RenderTheme::adjustDefaultStyleSheet(CSSStyleSheet*)
+{
+}
 #endif
 
 bool RenderTheme::paint(RenderObject* o, const RenderObject::PaintInfo& paintInfo, const IntRect& r)
